<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alexa</string>
    <string name="menu_settings">Settings</string>
    <string name="login_with_amazon">Login with Amazon</string>
    <string name="logout">Logout</string>
    <string name="default_message">Welcome to Login with Amazon!\nIf this is your first time logging in, you will be asked to give permission for this application to access your profile data.</string>
    <string name="return_to_app">Return to App</string>
    <string name="leave_app_text">Press again to exit the App</string>

    <string name="status_listening">LISTENING…</string>
    <string name="status_processing">PROCESSING…</string>
    <string name="status_speaking">SPEAKING…</string>
    <string name="home">Alexa voice assistant</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="version" translatable="false"></string>
    <string name="home_text">Push the microphone button and start ask!</string>
    <string name="about_text">Alexa™ is a intelligent voice assistant. It is a product developed by Amazon. The Android™ version is the same as Echo. It can connects to the Alexa Voice Service to play music, make calls, send and receive messages, provide information, news, sports scores, weather, and more—instantly. All you have to do is ask.</string>
    <string name="about_copyright" translatable="false">Copyright &#169; 2017&#8211;2018 by Alexa.\n</string>
    <string name="help_text">Here are some of the many things you can ask Alexa:</string>
    <string name="share_tittle">Share a good APP</string>
    <string name="share_content">Alexa voice assistant, just ask!</string>
    <string name="share_url">www.mi.com</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="text_question1" translatable="false">What is the weather in Beijing?</string>
    <string name="text_question2" translatable="false">What time is it in Beijing?</string>
    <string name="text_question3" translatable="false">What is in the news?</string>
    <string name="text_question4" translatable="false">Play music.</string>
    <string name="text_question5" translatable="false">Read my Kindle book.</string>
    <string name="text_question6" translatable="false">Set an alarm for 7:00 AM.</string>
    <string name="text_question7" translatable="false">Remind me to walk the dog every day.</string>
    <string name="text_question8" translatable="false">Set a timer for 10 minutes.</string>
    <string name="more_question">More: https://www.amazon.com/b?node=13727921011</string>

</resources>
